--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/Kenney Pixel.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/SFX/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://assets/SFX/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/coin.tscn", "res://Scenes/player.tscn", "res://Scenes/ui.tscn", "res://Scenes/minimap_grid.tscn", "res://Scenes/key.tscn", "res://Scenes/door.tscn", "res://Scenes/room.tscn", "res://Scenes/enemy.tscn", "res://Scenes/sfx.tscn", "res://Scenes/main_menu.tscn", "res://Scenes/death_menu.tscn")
-current_scene="res://Scenes/main.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/coin.tscn", "res://Scenes/player.tscn", "res://Scenes/ui.tscn", "res://Scenes/minimap_grid.tscn", "res://Scenes/key.tscn", "res://Scenes/door.tscn", "res://Scenes/room.tscn", "res://Scenes/enemy.tscn", "res://Scenes/sfx.tscn", "res://Scenes/main_menu.tscn", "res://Scenes/death_menu.tscn", "res://Scenes/card.tscn")
+current_scene="res://Scenes/card.tscn"
 center_split_offset=-363
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,12 +37,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/coin.gd", "res://Scripts/death_menu.gd", "res://Scripts/door.gd", "res://Scripts/enemies.gd", "res://Scripts/enemy.gd", "res://Scripts/generation.gd", "res://Scripts/heart.gd", "res://Scripts/key.gd", "res://Scripts/main_menu.gd", "res://Scripts/minimap_grid.gd", "res://Scripts/player.gd", "res://Scripts/player_data.gd", "res://Scripts/room.gd", "res://Scripts/Signal_bus.gd", "res://Scripts/ui.gd"]
-selected_script=""
+open_scripts=["res://Scripts/CardGeneration.gd", "res://Scripts/coin.gd", "res://Scripts/death_menu.gd", "res://Scripts/door.gd", "res://Scripts/enemies.gd", "res://Scripts/enemy.gd", "res://Scripts/generation.gd", "res://Scripts/heart.gd", "res://Scripts/key.gd", "res://Scripts/main_menu.gd", "res://Scripts/minimap_grid.gd", "res://Scripts/player.gd", "res://Scripts/player_data.gd", "res://Scripts/room.gd", "res://Scripts/Signal_bus.gd", "res://Scripts/ui.gd"]
+selected_script="res://Scripts/CardGeneration.gd"
 open_help=["ProjectSettings"]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=0.857143
+zoom_factor=1.07143
 
 [ShaderEditor]
 
@@ -59,5 +59,5 @@ position=Vector2i(0, 34)
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(757, 374, 1232, 747)
+floating_window_screen=0
